<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/holo_red_light"
        android:textIsSelectable="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textIsSelectable="true"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versity"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textIsSelectable="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/myTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/mybutton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/click"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:onClick="show_msg"
            tools:ignore="ButtonStyle,OnClick,RtlHardcoded" />

        <Button
            android:id="@+id/hide"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hide"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:onClick="hide_msg"
            tools:ignore="ButtonStyle,OnClick" />


    </LinearLayout>



    <ScrollView
        android:id="@+id/myparagraph"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mypara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textIsSelectable="true"
            />
    </ScrollView>


</LinearLayout>